# lammps-plugins

./: CMakeLists.txt  README.md
USER-AEAM/: AlSi.aeam  CMakeLists.txt  README.md  README.txt  aeamplugin.cpp  aeamplugin.nsis  pair_aeam.cpp  pair_aeam.h  sample.in
USER-BFIELD/: CMakeLists.txt  bfieldplugin.cpp  bfieldplugin.nsis  fix_bfield.cpp  fix_bfield.h
USER-REBOMOS/: CMakeLists.txt  MoS.REBO.set5b  in.rebomos-bulk  log.rebomos-bulk.1  log.rebomos-bulk.4  pair_rebomos.cpp  pair_rebomos.h  rebomosplugin.cpp  rebomosplugin.nsis
USER-VCSGC/: CMakeLists.txt  README.md  README.txt  fix_semigrandcanonical_mc.cpp  fix_semigrandcanonical_mc.h  vcsgcplugin.cpp  vcsgcplugin.nsis
pair-aeam/: aeamplugin.cpp  aeamplugin.nsis  pair_aeam.cpp
